--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@
 }
 
 html, body {
-  height: 100%;
   margin: 0;
   padding: 0;
   font-family: "Nobile", sans-serif;
@@ -113,6 +112,10 @@ body {
 
 .contact-bar img:hover {
   transform: scale(1.3);
+}
+
+.contact-bar-mobile {
+  display: none;
 }
 
 /* Main Content */
@@ -352,4 +355,151 @@ ul li {
   font-size: 14px;
   line-height: 1.6;
   margin: 0;
+}
+
+@media (max-width: 1250px) {
+  html, body {
+    height: auto;
+  }
+
+  body {
+    background: radial-gradient(circle at top left, var(--primary-color), var(--background-color));
+    flex-direction: column;
+    overflow-y: auto;
+  }
+
+  .sidebar {
+    width: 100%;
+    min-height: auto;
+    padding: 20px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    order: -1;
+  }
+
+  .contact-bar {
+    display: none;
+  }
+
+  .contact-bar-mobile {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: center;
+    margin-top: 50px;
+  }
+
+  .contact-bar-mobile img {
+    width: 50px;
+    height: 50px;
+    margin: 0 15px;
+    opacity: 0.8;
+    transition: all 0.3s ease;
+    flex-shrink: 0;
+    border-radius: 50%;
+  }
+
+  .contact-bar-mobile img:hover {
+    transform: scale(1.3);
+  }
+
+  .main {
+    width: 100%;
+    height: auto;
+    padding: 40px 20px;
+    padding-top: 0px;
+    padding-bottom: 40px;
+    order: 1;
+    overflow-y: visible;
+  }
+
+  .sidebar img {
+    width: 50%;
+    max-width: 200px;
+    margin-bottom: 10px;
+  }
+
+  .sidebar h1 {
+    width: 100%;
+    text-align: center;
+    font-size: 10vw;
+    margin-bottom: 5px;
+  }
+
+  .sidebar p {
+    width: 100%;
+    text-align: center;
+    font-size: 3vw;
+    margin-bottom: 5px;
+  }
+
+  .table-of-contents {
+    display: none;
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 25px;
+    margin: 15px 0 0 0;
+  }
+
+  .table-of-contents a {
+    align-self: center;
+    font-size: 20px;
+    transform: none;
+  }
+
+  .table-of-contents a.active,
+  .table-of-contents a:hover {
+    transform: scale(1.1);
+  }
+
+  .item-header {
+    display: block;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+
+  .item-header h3 {
+    font-size: 20px;
+    color: var(--highlight-color);
+    margin: 10px 0;
+  }
+
+  .item-date {
+    color: var(--text-color);
+    font-size: 15px;
+    margin-left: 0;
+  }
+
+  .project-content {
+    display: block;
+    width: 100%;
+  }
+
+  .project-image-wrapper {
+    width: 100%;
+    display: block;
+  }
+
+  .project-image {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+
+  .project-header {
+    display: block;
+    margin-bottom: 15px;
+  }
+
+  .project-header h3 {
+    margin-bottom: 10px;
+  }
+
+  .project-date {
+    margin: 0;
+    font-size: 15px;
+  }
 }
