--- a/style.css
+++ b/style.css
@@ -357,6 +357,10 @@ ul li {
 }
 
 @media (max-width: 1250px) {
+  .page-content {
+    padding: 0 !important;
+  }
+
   html, body {
     height: auto;
     background: radial-gradient(circle at top left, var(--primary-color), var(--background-color));
